--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,6 +2,6 @@
     "routes": [
       { "handle": "filesystem" },
       { "src": "/", "dest": "/" },
-      { "src": "/:filename/:id", "dest": "/" },
+      { "src": "/:filename/:id", "dest": "/" }
     ]
   }
