--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
